--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.2.0",
@@ -16,6 +17,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.10.0",
     "axios": "^1.4.0",
     "chart": "^0.1.2",
     "dayjs": "^1.11.9",
@@ -26,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-quill": "^2.0.0",
+    "react-quill-antd": "^1.0.1-beta",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
